Actualización del proyecto Enero 2024

--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Dann LeBeau">
+  <meta name="description" content="La mejor cocineria de Curepto">
+  <meta name="keywords" content="Curepto, curepto, cocinera, comida, casera, almuerzo">
   <title>Don Beto</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
-
+  
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/tenedor.png" rel="icon">
+  <link href="assets/img/tenedor.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -45,7 +46,7 @@
 
       <a href="index.html" class="logo d-flex align-items-center me-auto me-lg-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.png" alt=""> -->
+        <img src="assets/img/tenedor.png" alt="">
         <h1>Cocinería Don Beto<span>.</span></h1>
       </a>
 
@@ -999,7 +1000,7 @@
               <i class="icon bi bi-envelope flex-shrink-0"></i>
               <div>
                 <h3>Nuestro correo</h3>
-                <p>cocineriadonbeto@gmail.com</p>
+                <p>legeographe@proton.me</p>
               </div>
             </div>
           </div><!-- End Info Item -->
@@ -1093,7 +1094,7 @@
             <h4>Reservación</h4>
             <p>
               <strong>Telefono:</strong> +569 8255 6554<br>
-              <strong>Correo:</strong> cocineriadonbeto@gmail.com<br>
+              <strong>Correo:</strong> legeographe@proton.me<br>
             </p>
           </div>
         </div>
@@ -1126,7 +1127,7 @@
 
     <div class="container">
       <div class="copyright">
-        &copy 2023; Copyright <strong><span>Cocinería Don Beto</span></strong>. Todos los derechos reservados
+        &copy 2024; Copyright <strong><span>Cocinería Don Beto</span></strong>. Todos los derechos reservados
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
