--- a/index.html
+++ b/index.html
@@ -1000,7 +1000,7 @@
               <i class="icon bi bi-envelope flex-shrink-0"></i>
               <div>
                 <h3>Nuestro correo</h3>
-                <p>legeographe@proton.me</p>
+                <p>cocineriadonbeto2@gmail.com</p>
               </div>
             </div>
           </div><!-- End Info Item -->
@@ -1094,7 +1094,7 @@
             <h4>Reservación</h4>
             <p>
               <strong>Telefono:</strong> +569 8255 6554<br>
-              <strong>Correo:</strong> legeographe@proton.me<br>
+              <strong>Correo:</strong> cocineriadonbeto2@gmail.com<br>
             </p>
           </div>
         </div>
